# job-website

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  blacklist.txt  cron  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
frontend/: components.json  docker-compose.yml  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/api/: index.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/revalidate/: route.ts
frontend/components/: Navbar.tsx  jobcard.tsx  paginated.tsx  stats.tsx  table.tsx  updated.tsx
frontend/components/shadcn/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  table.tsx  tooltip.tsx
frontend/src/: constants.ts
src/main/: __init__.py  main.py
src/scrape/: __main__.py  scrape_computerjobs.py  scrape_linkedin.py  scrape_simplify_github.py
src/sweify/: __main__.py
src/transform/: __init__.py  __main__.py  parse_computerjobs.py  parse_linkedin.py  util.py
tests/: test_convert_timestamps.py  test_get_tech_stack.py  test_get_years_of_experience.py  test_import.py
