[tool.poetry]
name = "sweify"
version = "0.1.0"
description = ""
authors = ["jaasonw <jayywong92@gmail.com>"]
license = "MIT"
packages = [
    { include = "scrape", from = "src" },
    { include = "api", from = "src" },
    { include = "transform", from = "src" },
    { include = "sweify", from = "src" },
]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
scrapy = "^2.9.0"
pygsheets = "^2.0.6"
pandas = "^2.0.3"
schedule = "^1.2.0"
shillelagh = {extras = ["gsheetsapi"], version = "^1.2.8"}
requests-cache = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
